@@ -133,6 +133,9 @@ colors.
 \fB\-R\fP
 Swaps left and right of the image like a mirror.
 .TP
+\fB\-G\fP
+Turns off use of mmap'ed memory. see \fIvgrabbj.conf\fP(5) for details.
+.TP
 \fB\-D\fP <\fIvalue\fP>
 Sets the loglevel of \fBvgrabbj\fP. Valid for \fIvalue\fP are 0, 2, 3, 4, 6, 7
 (default: 4). 0 means no messages at all, 7 is debug. Don't use 7 if
