@@ -67,6 +67,10 @@ SwitchColor	Off
 SwitchRL	Off
 ;	If you would like to get a mirrored image (left-right), turn
 ;	this switch on; default: Off
+NoUseMmap	Off
+;	Set to yes if your cam cannot do RGB24 and cannot use mmap'ed
+;	memory. Rarely needed. If you don't know what I'm talking about,
+;	leave at default: Off
 ;DiscardFrames  0
 ;	You can discard x frames before the actual picture is taken
 ;	This might be helpful if your image is over- or underexposed
